--- a/css/login.css
+++ b/css/login.css
@@ -94,7 +94,8 @@ body {
   padding-bottom: 20px;
 }
 
-.login-page .btn-submit {
+.login-page .btn-submit,
+.login-page .btn-next {
   width: 100%;
   max-width: 345px;
   background: -webkit-gradient(linear, left top, right top, from(#7FA1F8), color-stop(35%, #B279F7), color-stop(70%, #C4C4C4), to(#C4C4C4));
@@ -123,7 +124,8 @@ body {
   pointer-events: none;
 }
 
-.login-page .btn-submit.active {
+.login-page .btn-submit.active,
+.login-page .btn-next.active {
   color: #FFFFFF;
   background-position: left;
   cursor: pointer;
@@ -175,6 +177,11 @@ body {
 .login-page .login-content .img-cont img {
   width: 100%;
   max-width: 468px;
+  max-height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: center;
+     object-position: center;
 }
 
 .login-page .login-content .detail-form-text-cont {
@@ -415,10 +422,22 @@ body {
   color: #000000;
 }
 
+.login-page .login-content .login-form .login-input.customselect-wrapper,
+.login-page .login-content .agreement-form .login-input.customselect-wrapper {
+  max-width: 345px;
+}
+
+.login-page .login-content .login-form .login-input.customselect-wrapper .select-styled,
+.login-page .login-content .agreement-form .login-input.customselect-wrapper .select-styled {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border: 1px solid #C4C4C4;
+}
+
 .login-page .login-content .login-form .login-input .error-text,
 .login-page .login-content .agreement-form .login-input .error-text {
   padding-top: 5px;
-  font-size: 12pz;
+  font-size: 12px;
   line-height: 14px;
   font-family: "Gilroy", Verdana, Tahoma, sans-serif;
   color: #FF7262;
@@ -507,6 +526,40 @@ body {
   background-repeat: no-repeat;
   -webkit-background-size: contain;
           background-size: contain;
+}
+
+.login-page .thanks-wrap .agreement-form {
+  height: 520px;
+  max-height: 60vh;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.login-page .thanks-wrap .agreement-form .btn-cont {
+  width: 100%;
+}
+
+.login-page .thanks-wrap .agreement-form .login-header {
+  padding-bottom: 40px;
+}
+
+.login-page .thanks-wrap .agreement-form .under-header {
+  padding-bottom: 40px;
 }
 
 .login-page .interests-content {
@@ -820,8 +873,49 @@ body {
   .login-page .login-content .agreement-form .under-header {
     max-width: none;
   }
-  .login-page .login-content .agreement-form .btn-submit {
+  .login-page .login-content .agreement-form .btn-submit,
+  .login-page .login-content .agreement-form .btn-next {
     max-width: none;
+  }
+  .login-page .thanks-wrap {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .login-page .thanks-wrap .img-cont {
+    display: block;
+    position: relative;
+    height: 50vh;
+    width: 100%;
+  }
+  .login-page .thanks-wrap .img-cont img {
+    max-height: 100%;
+    -o-object-fit: contain;
+       object-fit: contain;
+    -o-object-position: center;
+       object-position: center;
+  }
+  .login-page .thanks-wrap .agreement-form {
+    height: auto;
+    max-height: initial;
+  }
+  .login-page .thanks-wrap .agreement-form .login-header,
+  .login-page .thanks-wrap .agreement-form .under-header {
+    padding-bottom: 20px;
   }
 }
 
@@ -829,7 +923,8 @@ body {
   .login-page .header .logo {
     max-width: 80px;
   }
-  .login-page .btn-submit {
+  .login-page .btn-submit,
+  .login-page .btn-next {
     padding: 15px;
     max-width: 100%;
   }
